    ERROR EXISTS EXTEND FDOPEN FETCH FETCHSIZE FILENO FILL FIRSTKEY FLUSH
    GETC NEXTKEY OPEN POP POPPED PRINT PRINTF PUSH PUSHED READ READLINE
    SCALAR SEEK SETLINEBUF SHIFT SPLICE STORE STORESIZE SYSOPEN TELL
    TIEARRAY TIEHANDLE TIEHASH TIESCALAR UNREAD UNSHIFT UNTIE UTF8 WRITE to @TieIOMethods,
    can isa DOES VERSION to @UNIVERSALMethods,
    @EXPORT @EXPORT_OK @EXPORT_FAIL
    @EXPORT_TAGS _push_tags _rebuild_cache as_heavy export export_fail
    export_fail_in export_ok_tags export_tags export_to_level heavy_export
    heavy_export_ok_tags heavy_export_tags heavy_export_to_level
    heavy_require_version require_version  to @ExporterSymbols (Zsbán Ambrus)
  - Moved exp from @Barewords to @Functions
  - Added $^CHILD_ERROR_NATIVE $^GLOBAL_PHASE $^LAST_FH $^MATCH $^PREMATCH
    $^POSTMATCH $^UTF8CACHE $^WIN32_SLOPPY_STAT to @Scalars
  - Added English names for %!, @F (perlrun) and @ARG for @_ (Zsbán Ambrus)
  - Added %+ %- (Zsbán Ambrus) and $LAST_SUBMATCH_RESULT
1.14 Sat Feb 21 2015 rurban
  - removed err from Barewords, RT #102259 (Alex Efros a.k.a. Powerman)
1.15 Wed Nov 11 2015 rurban
  - Fixed $OUTPUT_AUTOFLUSH, RT #108572 (Defragmented Reality)
  - Made $* $MULTILINE_MATCHING version specific, deprecated with 5.8.1,
    removed with 5.10
1.16 Thu Dec 28 2017 rurban
  - Added 5.27.7 changes, RT #123948
  - Added cperl class keywords
  - Added keywords per version back to 5.004
1.17 Mon Jan 29 17:57:05 CET 2018 rurban
  - Added 5.27.8 changes, whereis/whereso is gone for good.
    There's still a chance for perl6 compat
1.18 Mon Jan 29 18:09:23 CET 2018 rurban
  - Oops, forgot break
1.19 Thu Aug 23 11:16:09 CEST 2018
  - our was added with 5.005_61
1.20 2019-02-15 11:03:00 rurban
  - extern was added with 5.29.0c
1.21 2019-12-17 17:38:00 rurban
  - isa was added with 5.31.7
  - improved t/z_kwalitee.t
1.22 2021-02-22 09:42:18 rurban
  - add try/catch by Tom Wyant
1.23 2021-10-30 10:52:43 rurban
  - relax bogus blead test failures
 