@@ -97,4 +97,5 @@ Revision history for Perl extension B::Keywords.
   - add try/catch by Tom Wyant
 1.23 2021-10-30 10:52:43 rurban
   - relax bogus blead test failures
+  - add reverse test: if @Barewords are covered on keywords.h
  
